infrastructure/base/windows/firefox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novnc-firefox-esr
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,192.168.0.0/16"
spec:
  ingressClassName: nginx
  rules:
  - host: novnc.firefox-softethervpn.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: novnc
            port:
              number: 80
